# volans-parser

./: .gitignore  README.md
function/: dev.ipynb  main.py  parser.py  pyproject.toml  requirements.txt
infra/: main.tf
